[package]
name = "berlin-core"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Identify locations and tag them with UN-LOCODEs and ISO-3166-2 subdivisions."
readme = "README.md"
repository = "https://gitlab.com/flaxandteal/onyx/berlin-rs"
keywords = ["geospatial", "nlp", "search"]
categories = ["science::geo", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ustr = { version = "0.8.1", features = ["serde", "serialization"] }
smallvec = { version = "1.8.0", features = ["serde"] }
ahash = "0.7.6"
regex = "1.5.4"
rayon = "1.5.1"
strum = "0.23.0"
strum_macros = "0.23.1"

nom = "7.1.0"
csv = "1.1.6"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
schemars = { version = "0.8.8", features = ["smallvec"] }

tracing = { version = "0.1.29", features = ["log"] }

deunicode = "1.3.1"
unicode-segmentation = "1.9.0"

strsim = "0.10.0"

petgraph = "0.6.0"

fst = { version = "0.4.7", features = ["levenshtein"] }

[profile.dev]
split-debuginfo = "unpacked"
debug = true

[profile.release]
incremental = true
debug = false
opt-level = 3
lto = "thin"

[dev-dependencies]
rstest = "0.17.0"
